# WechatFriendCircleLongPic

./: .gitignore  LICENSE  Package.swift  README.md  project.yml
.github/workflows/: windows-build.yml
Sources/WechatLongPicGUI/: App.swift  ContentView.swift  IconGenerator.swift
Sources/WechatLongPicGUI/Shared/: AutoArrange.swift  ImageProcessor.swift
iOS/: project.yml
iOS/Assets.xcassets/AccentColor.colorset/: Contents.json
iOS/Shared/: PlatformImage.swift
iOS/Sources/: App.swift  AppModel.swift  ContentView.swift  CropPickerView.swift  ImageRow.swift
macOS/: App.swift  AppModel.swift  ContentView.swift  CropPickerView.swift  ImageRow.swift
macOS/Shared/: ImageItem.swift
windows/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
windows/src/: App.svelte  app.css
windows/src-tauri/: Cargo.toml  tauri.conf.json
windows/src-tauri/capabilities/: default.json
windows/src-tauri/src/: arrange.rs  compose.rs  lib.rs  main.rs
windows/src/lib/: CropPicker.svelte  ImageRow.svelte  api.ts  store.ts
